<resources>
    <string name="app_name">SmartJakApp</string>
    <string name="hospital">Hospital</string>
    <string name="police">Police</string>
    <string name="satpolpp">Satpol PP</string>
    <string name="search">Searching</string>
    <string name="title_activity_maps">Map</string>
    <string name="kosong">-</string>
    <string name="adress">Address :</string>
    <string name="phone">Phone :</string>
    <string name="position">Position :</string>
    <string name="route">Maps</string>
    <string name="image_icon">Image Icon</string>
    <string name="police_quote">Kepolisian Nasional di Indonesia, yang bertanggung jawab langsung di bawah Presiden</string>
    <string name="satpol_pp_quote">perangkat Pemerintah Daerah dalam memelihara ketentraman dan ketertiban umum serta menegakkan Peraturan Daerah</string>
    <string name="hospital_quote">sebuah institusi perawatan kesehatan profesional yang pelayanannya disediakan oleh dokter, perawat, dan tenaga ahli kesehatan lainnya.</string>
    <string name="website">Website :</string>
    <string name="email">Email :</string>
    <string name="favorite">Favorite</string>
</resources>
