<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@drawable/gradient_bg"
        android:layout_height="match_parent"
        tools:context=".hospital.HospitalDetailActivity">

    <LinearLayout
            android:layout_below="@id/logo"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

    <ImageView
            android:id="@+id/logo"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:src="@drawable/hospitallogo"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_icon"/>

    <LinearLayout
            android:layout_below="@id/titles"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

    <TextView
            android:id="@+id/titles"
            android:layout_margin="10dp"
            tools:text="POLISI GADUNGAN"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_below="@id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:id="@+id/phone_text"
            android:layout_below="@id/titles"
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/phone_text"
            android:layout_alignStart="@id/address"
            android:layout_alignEnd="@id/address"
            android:id="@+id/phone"
            android:layout_below="@id/titles"
            tools:text="0892763726"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"
            android:id="@+id/address_text"
            android:layout_margin="10dp"
            android:layout_below="@id/phone"
            android:text="@string/adress"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_margin="10dp"
            android:layout_below="@id/phone"
            android:id="@+id/address"
            android:textSize="18sp"
            android:layout_toEndOf="@id/address_text"
            tools:text="Jln Sesama 123 Jakarta Selatan No 10"
            android:layout_alignParentEnd="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_alignParentStart="true"
            android:id="@+id/website_text"
            android:layout_margin="10dp"
            android:layout_below="@id/address"
            android:text="@string/website"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:layout_below="@id/address"
            android:id="@+id/website"
            android:textSize="18sp"
            android:layout_toEndOf="@id/website_text"
            tools:text="Kepala Penjara No 323 Kuningan Raya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/email_text"
            android:layout_below="@id/website"
            android:text="@string/email"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginTop="10dp"
            android:layout_alignStart="@id/website"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/website"
            android:id="@+id/email"
            android:textSize="18sp"
            android:layout_toEndOf="@id/email_text"
            tools:text="Kepala Penjara No 323 Kuningan Raya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/route"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button"
            android:layout_below="@id/email"
            android:fontFamily="@font/ubtuntu"
            android:layout_centerHorizontal="true"
            android:text="@string/route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</RelativeLayout>