<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/skyblue"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <TextView
                android:layout_margin="10dp"
                android:text="@string/police"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <TextView
                android:layout_margin="10dp"
                android:text="@string/satpolpp"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_satpolpp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <TextView
                android:layout_margin="10dp"
                android:text="@string/hospital"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_hospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>